@@ -62,6 +62,7 @@
     Phonon backends seem to work reliably, and there can be delays between
     pressing a button (e.g. start) and the action occuring (due to buffering?).
     To re-enable pass -DDENABLE_PHONON=ON to cmake.
+36. Handle UTF-8 playlist names.
 
 0.8.3.1
 -------
